--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,13 @@
   <base href="/" />
 
   <meta name="color-scheme" content="light dark" />
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport"
+    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
   <link rel="icon" type="image/x-icon" href="assets/icon/logo.ico" />
+  <script src="https://sp.zalo.me/plugins/sdk.js"></script>
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -21,6 +23,12 @@
 
 <body>
   <app-root></app-root>
+  <div
+    class="zalo-chat-widget" data-oaid="142921301386570471"
+    data-welcome-message="💕SOFACO hân hạnh chào đón bạn đến với kênh Zalo OA chính thức của chúng tôi. 🔔Hãy nhấn vào nút QUAN TÂM kênh Zalo OA của SOFACO ngay để không bỏ lỡ bất kỳ ưu đãi nào. Và đừng quên ĐỂ LẠI LỜI NHẮN để được tư vấn và hỗ trợ tốt nhất nhé! ✨✨Rất vui khi được hỗ trợ bạn!"
+    data-autopopup="0" data-width="" data-height=""
+  >
+  </div>
 </body>
 
 </html>
